First draft of header

--- a/index.html
+++ b/index.html
@@ -35,8 +35,32 @@
             </li>
           </a>
         </ul>
+        <div class="bird-etched"></div>
       </div>
+      <div class="pull-right">
+        <div class="search-bar">
+          <form class="form-search" action="#">
+            <input class="search-input" type="text" placeholder="Search">
+            <button type="submit" class="nav-search">
+          </form>
+        </div> 
+      </div>
+      <i class="topbar-divider"></i>
+      <a href="#" title="Direct messages">
+        <i class="nav-envelope"></i>
+      </a>
+      <i class="topbar-divider second"></i>
+      <a href="#" title="Settings and help">
+        <i class="nav-session"></i>
+        <span class="claret"></span>
+      </a>
+      <i class="topbar-divider third"></i>
+      <a href="#" title="Compose new Tweet">
+        <div class="nav-tweet-box">
+        <i class="nav-tweet"></i>
+      </a>
     </div>
-  <script type="text/javascript" src="twitter.js"></script>
+      </div>
+    <script type="text/javascript" src="twitter.js"></script>
   </body>
 </html>
