Added main content divs

--- a/index.html
+++ b/index.html
@@ -56,10 +56,17 @@
       </a>
       <i class="topbar-divider third"></i>
       <a href="#" title="Compose new Tweet">
-        <div class="nav-tweet-box">
-        <i class="nav-tweet"></i>
-      </a>
+      <div class="nav-tweet-box">
+      <i class="nav-tweet"></i>
     </div>
+  </a>
+      </div>
+
+      <div class="mini-profile">
+      </div>
+      <div class="who-to-follow">
+      </div>
+      <div class="tweet-feed">
       </div>
     <script type="text/javascript" src="twitter.js"></script>
   </body>
